--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@buckhamduffy/vue-activity-log",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "",
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-replace": "^2.3.4",
     "@vue/cli-plugin-babel": "^4.5.10",
+    "rollup-plugin-css-only": "^3.1.0",
     "@vue/cli-service": "^4.5.10",
     "cross-env": "^7.0.3",
     "minimist": "^1.2.5",
